--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "13.5.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
     "@types/node": "20.8.4",
     "@types/react": "18.2.27",
     "@types/react-dom": "18.2.12",
     "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "typescript": "5.2.2"
   }
 }
